--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       </style>
     </head>
     <body>
+      <h1>Halesho Bebarid 🤓</h1>
       <div id="wrap">
         <div id="col1">
           <div id="terminal"></div>
